--- a/webApp/0_homepge.html
+++ b/webApp/0_homepge.html
@@ -17,8 +17,10 @@ html{
 	overflow: hidden;
 }
 *{
- margin: 0px;
- padding: 0px;
+	margin: 0px;
+ 	padding: 0px;
+	font-style: normal;
+	font-family: Arial, Helvetica, sans-serif;
 }
 #readmore {display: none;}
 
@@ -123,7 +125,7 @@ header{
 header h1{
 	margin-top: -100px;
 }
-header. header:before{
+header .header:before{
 	background: 50% 50% /cover;
 
 }
@@ -299,7 +301,7 @@ box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
     <li><a href="#Syllabus">Syllabus</a></li>
 		<li><a href="1_online_editor.html">Online Editor</a></li>
     <li><a href="1_videogallery.html">Video Gallery</a></li>
-    <li><a href="#contact_us">About us</a></li>
+    <li><a href="#contactus">Contact Us</a></li>
 	</ul>
 
 	<div class="hero-image">
@@ -424,7 +426,7 @@ box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
 
 <script type="text/javascript" language="javascript">
    function read() {
-   	document.write("<ul>"+"<li>"+""+)
+   	document.write("<ul>"+"<li>"+"")
    }
 
 </script>
@@ -437,15 +439,12 @@ box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
 
          <p style="font-family: vardana; font-size: 17px;">Scripting Tchnology is specially made for education purposes , to learning javascript. It is specially for first year student.  </p>
 
-          <i class="fab fa-cc-amazon-pay"></i>&nbsp;&nbsp;<name>93256-75998</name><br><br>
+          <i class="fas fa-phone"></i>&nbsp;&nbsp;<name>93256-75998</name><br><br>
           <i class="fas fa-envelope">&nbsp;&nbsp;<name style="font-size: 20px;">info@mywesite.com</name></i><br><br>
          <i class="fab fa-google-plus-g"></i>&nbsp;&nbsp;
-         <i class="fab fa-facebook"></i>&nbsp;&nbsp;
+        	 <i class="fab fa-facebook"></i>&nbsp;&nbsp;
          <i class="fab fa-instagram"></i>&nbsp;&nbsp;
-         <i class="fab fa-cc-visa"></i>&nbsp;&nbsp;
-         <i class="fab fa-cc-mastercard"></i>&nbsp;&nbsp;
-         <i class="fab fa-cc-amazon-pay"></i>&nbsp;&nbsp;
-         <i class="fab fa-cc-amazon-pay"></i>
+        
 
 
 		</div>
@@ -458,11 +457,10 @@ box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
 				<li>Janhavi Sonawane</li>
 				<li>Dnyanesh Bachhav</li>
 				<li>Tejas Patil</li>
-				<li>Terms and Conditions</li>
 			</ul>
 		
 			</div>
-				<div class="footer-section contact-form">
+				<div class="footer-section contact-form" id="contactus">
 					<h2>Contact Us</h2><br>
                    &nbsp; &nbsp;<input type="email" name="email" placeholder="Your Email Address..." style="background:#272727; color: #beddbd; margin-bottom: 10px; line-height: 1.5rem; padding: .9rem 1.4rem; border:none; border-radius: 50px;"><br>
                    &nbsp;&nbsp;<textarea name="message" class="text-input contact-input" placeholder="Your Message..." style="background:#272727; color: #beddbd; margin-bottom: 10px; line-height: 1.5rem; padding: .9rem 1.4rem; border: none; border-radius: 50px;"></textarea><br>
