--- a/webApp/1_online_editor.html
+++ b/webApp/1_online_editor.html
@@ -10,6 +10,11 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
  <style type="text/css">
+
+	*{
+		font-style: normal;
+		font-family: Arial, Helvetica, sans-serif;
+	}
  	.tal:hover{ 
            color: red;
  	}
@@ -84,7 +89,7 @@
 	 }
 	 runcode1();
 </script>
-  <center><input onclick="runcode();" type="button" value="Run code" style="background-color: #fff; color: #000; border-radius: 20px;padding: 10px;margin-top: 10px;margin-bottom: 10px;" ></center>
+  <center><button onclick="runcode1();"   class="btn btn-success" >Run Code</button></center>
 
 </script>
 
