--- a/webApp/heading_1.html
+++ b/webApp/heading_1.html
@@ -7,8 +7,11 @@
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <style>
-	body{
+	*{
 		margin: 0px;
+		font-style: normal;
+		font-family: Arial, Helvetica, sans-serif;
+
 	}
 	.head{
 		width: 100%;
@@ -35,7 +38,7 @@
 <header class="head">
 	<nav>
 		<div class="unitname">
-		<p style="color: white; font-size: 30px;"><b>Introduction to JavaScript</b></p>			
+		<p style="color: white; font-size: 30px; margin-top: 3px; text-transform: uppercase;" ><b>Introduction to JavaScript</b></p>			
 		</div>
 		
 		<div class="back">
