--- a/webApp/unit_1_1.1 (1).html
+++ b/webApp/unit_1_1.1 (1).html
@@ -24,6 +24,7 @@
 	*{
  margin: 0px;
  padding: 0px;
+ font-family: Arial, Helvetica, sans-serif;
 }
 
 	h2.head{
@@ -32,6 +33,9 @@
 		padding-bottom: 10px;
 		text-align: center;
 		color: #fff;
+	}
+	.head{
+		text-transform: uppercase;
 	}
 
   h3{
@@ -48,7 +52,7 @@
 </style>
 <body>
  
-	<h2 class="head"><marquee behavior="Alternate">Using Java Script in HTML pages.</marquee></h2><br>
+	<h2 class="head">Using Java Script in HTML pages.</h2><br>
 
 	<div style="margin-top: 15px; margin-left: 40px; margin-right: 15px;">
 
