--- a/webApp/unit_4_4.1.html
+++ b/webApp/unit_4_4.1.html
@@ -23,6 +23,7 @@
   *{
  margin: 0px;
  padding: 0px;
+ font-family: Arial, Helvetica, sans-serif;
 }
   textarea.a{
      background: grey; border-left:black SOLID 10px;
@@ -34,13 +35,16 @@
     text-align: center;
     color: #fff;
   }
+  .head{
+		text-transform: uppercase;
+	}
 </style>
 <body>
 
 
 <!-- 4.1 -->
   
-  <h2 class="head"><marquee behavior="Alternate"><b> JavaScript User-Defined Functions</b></marquee></h2><br></br>
+  <h2 class="head"><b> JavaScript User-Defined Functions</b></h2><br></br>
 <div style="margin-top: 15px; margin-left: 15px; margin-right: 15px;">
   <h3 style="margin-left: 7px;"><b>Definition:</h3></b></br>
   <p style="margin-left: 20px;">An user-defined function saves  us from  rewriting the same code again and again and helps us to make our application smaller. The given examples will help you to understand how can you put them to work.</br>
