--- a/webApp/unit_4_4.2.html
+++ b/webApp/unit_4_4.2.html
@@ -23,6 +23,7 @@
 	*{
  margin: 0px;
  padding: 0px;
+ font-family: Arial, Helvetica, sans-serif;
 }
 
   textarea.a{
@@ -35,12 +36,15 @@
 		text-align: center;
 		color: #fff;
 	}
+  .head{
+		text-transform: uppercase;
+	}
 </style>
 <body>
 
 
 <!-- 4.2 -->
- <h2 class="head"><marquee behavior="Alternate"><b> Argument Array</b></marquee></h2><br>
+ <h2 class="head"><b> Argument Array</b></h2><br>
 <div style="margin-top: 15px; margin-left: 15px; margin-right: 15px;">
   <h3 style="margin-left: 7px;"><b>Definition:</h3></b>
   <p style="margin-left: 20px;">
