--- a/webApp/unit_5_5_1.html
+++ b/webApp/unit_5_5_1.html
@@ -24,6 +24,7 @@
 	*{
  margin: 0px;
  padding: 0px;
+ font-family: Arial, Helvetica, sans-serif;
 }
 
 	h2.head{
@@ -41,14 +42,16 @@
   p{
     margin-left: 20px;
   }
-
+  .head{
+		text-transform: uppercase;
+	}
   textarea.a{
     height: 200px; background: grey; border-left:black SOLID 10px;
   }
 </style>
 <body>
  
-	<h2 class="head"><marquee behavior="Alternate">Public Private Variables And Their Scope</marquee></h2><br>
+	<h2 class="head">Public Private Variables And Their Scope</h2><br>
   
 	<div style="margin-top: 15px; margin-left: 40px; margin-right: 15px;">
 
