--- a/webApp/unit_6_6.3.html
+++ b/webApp/unit_6_6.3.html
@@ -23,6 +23,7 @@
 	*{
  margin: 0px;
  padding: 0px;
+ font-family: Arial, Helvetica, sans-serif;
 }
 
 	h2.head{
@@ -32,10 +33,13 @@
 		text-align: center;
 		color: #fff;
 	}
+  .head{
+		text-transform: uppercase;
+	}
 </style>
 
 <body>
-<h2 class="head" ><marquee behavior="Alternate">Object Manipulation- for each...in</marquee></h2><br>
+<h2 class="head" >Object Manipulation- for each...in</h2><br>
 
 
 <h3 style="margin-left: 5px; "><b>for each...in</b></h3><br>
