--- a/webApp/Unit_7_7.2.html
+++ b/webApp/Unit_7_7.2.html
@@ -23,6 +23,7 @@
 	*{
  margin: 0px;
  padding: 2px;
+ font-family: Arial, Helvetica, sans-serif;
 }
 
 	h2.head{
@@ -40,9 +41,12 @@
   td,th{
     padding: 2px;
   }
+  .head{
+		text-transform: uppercase;
+	}
 </style>
 <body>
-  <h2 class="head"><marquee behavior="alternate"><b>User Defined Functions in VBscript</b></marquee></h2><br>
+  <h2 class="head"><b>User Defined Functions in VBscript</b></h2><br>
   <h1>Writing User-Defined Functions</h1>
   <div style="margin-top: 15px; margin-left: 40px; margin-right: 15px;">
   <p>MsgBox and InputBox are easy to use, but they might not be able to give you the functionality you need. Some of their limitations are minor. For example, neither function <br>lets you remove the VBScript prefix from the caption on the title bar. Other limitations are more significant. For example, MsgBox doesn't let you specify a custom icon or <br>custom button, and InputBox doesn't let you attach any code that validates or formats the data that users enter in the edit box.
