--- a/webApp/heading_2.html
+++ b/webApp/heading_2.html
@@ -8,7 +8,8 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <style>
 	body{
-		margin: 0px;
+		margin: 0px;      
+		font-family: Arial, Helvetica, sans-serif;
 	}
 	.head{
 		width: 100%;
@@ -35,7 +36,7 @@
 <header class="head">
 	<nav>
 		<div class="unitname">
-			<h1 style="color: white;"><b>Expressions in
+			<h1 style="color: white; margin-top: 3px; text-transform: uppercase;"><b>Expressions in
 Java Script</b></h1>			
 		</div>
 		<div class="back">
