--- a/webApp/heading_5.html
+++ b/webApp/heading_5.html
@@ -9,6 +9,7 @@
 <style>
 	body{
 		margin: 0px;
+		font-family: Arial, Helvetica, sans-serif;
 	}
 	.head{
 		width: 100%;
@@ -35,7 +36,7 @@
 <header class="head">
 	<nav>
 		<div class="unitname">
-			<h1 style="color: white;"><b>Introduction to
+			<h1 style="color: white; margin-top: 3px; text-transform: uppercase;"><b>Introduction to
 VBScript</b></h1>			
 		</div>
 		<div class="back">
