--- a/webApp/unit_1_1.2.html
+++ b/webApp/unit_1_1.2.html
@@ -23,7 +23,11 @@
 	*{
  margin: 0px;
  padding: 0px;
+ font-family: Arial, Helvetica, sans-serif;
 }
+.head{
+		text-transform: uppercase;
+	}
 
 	h2.head{
 		background: grey;
@@ -32,6 +36,7 @@
 		text-align: center;
 		color: #fff;
 	}
+
   p{
     margin-left: 20px;
   }
@@ -40,7 +45,7 @@
 
 
 <!-- 1.2 -->
-  <h2 class="head" ><marquee behavior="Alternate">Declaration of variable and Constant</marquee></h2><br>
+  <h2 class="head" >Declaration of variable and Constant</h2><br>
   <h3 style="margin-left: 5px; "><b>Simple Variable Declaration</b></h3><br>
 <div style="margin-top: 15px; margin-left: 40px; margin-right: 15px;">
 
