--- a/webApp/unit_1_1.3.html
+++ b/webApp/unit_1_1.3.html
@@ -23,6 +23,7 @@
 	*{
  margin: 0px;
  padding: 0px;
+ font-family: Arial, Helvetica, sans-serif;
 }
 
 	h2.head{
@@ -35,10 +36,13 @@
 	p{
     margin-left: 20px;
   }
+  .head{
+		text-transform: uppercase;
+	}
 </style>
 <body>
 
-<h2 class="head" ><marquee behavior="Alternate">Private, Public Variables and their scopes, Data type Conversion </marquee>
+<h2 class="head" >Private, Public Variables and their scopes, Data type Conversion 
 </h2><br>
 <h3 style="margin-left: 5px; "><b>Private Variables</b></h3><br>
 <div style="margin-top: 15px; margin-left: 40px; margin-right: 15px;">
