--- a/webApp/unit_1_1.4.html
+++ b/webApp/unit_1_1.4.html
@@ -23,6 +23,7 @@
 	*{
  margin: 0px;
  padding: 0px;
+ font-family: Arial, Helvetica, sans-serif;
 }
 
 	h2.head{
@@ -35,9 +36,12 @@
 	p{
 		padding-left: 20px;
 	}
+  .head{
+		text-transform: uppercase;
+	}
 </style>
 <body>
-<h2 class="head" ><marquee behavior="Alternate">Declaration, Evaluation and Scope of variables</marquee></h2><br>
+<h2 class="head" >Declaration, Evaluation and Scope of variables</h2><br>
 <h3 style="margin-left: 5px; "><b>Evaluaton:</b></h3><br>
 <div style="margin-top: 15px; margin-left: 40px; margin-right: 15px;">
   <h4 style="margin-left: 7px;">Definition:</h4>
