--- a/webApp/unit_1_1.5.html
+++ b/webApp/unit_1_1.5.html
@@ -23,6 +23,7 @@
 	*{
  margin: 0px;
  padding: 0px;
+ font-family: Arial, Helvetica, sans-serif;
 }
 
 	h2.head{
@@ -35,10 +36,13 @@
   p{
     padding-left: 20px;
   }
+  .head{
+		text-transform: uppercase;
+	}
 </style>
 <body>
 
-<h2 class="head" ><marquee behavior="Alternate">Literals-- Array, Boolean, Floating poinnt , Interger, Object String</marquee></h2><br>
+<h2 class="head" >Literals-- Array, Boolean, Floating poinnt , Interger, Object String</h2><br>
   <h3 style="margin-left: 5px; "><b>1) Array: </b></h3><br>
 <div style="margin-top: 15px; margin-left: 40px; margin-right: 15px;">
 
