--- a/webApp/unit_2_2.1.html
+++ b/webApp/unit_2_2.1.html
@@ -23,6 +23,7 @@
 	*{
  margin: 0px;
  padding: 0px;
+ font-family: Arial, Helvetica, sans-serif;
 }
 
   textarea.a{
@@ -50,12 +51,15 @@
     font-family: arial;
     background: linear-gradient(top, #3c3c3c 0%,#222222 100%);
  }
+ .head{
+		text-transform: uppercase;
+	}
   </style>
 <body>
 
 
 <!-- 2.1 -->
-  <h2 class="head"><marquee behavior="Alternate"><B>Operators- Assignment,Comparison, Bitwise, <br>Logical, String, Special, Arithmatic operators</B></marquee></h2><br>
+  <h2 class="head"><B>Operators- Assignment,Comparison, Bitwise, <br>Logical, String, Special, Arithmatic operators</B></h2><br>
 <div style="margin-top: 15px; margin-left: 15px; margin-right: 15px;">
   <h3 style="margin-left: 7px;"><B>Definition Of Operators:</B></h3></br>
   <p style="margin-left: 20px;"> An operator performs some operation on single or multiple operands (data value) and produces a result.
