--- a/webApp/unit_2_2.2.html
+++ b/webApp/unit_2_2.2.html
@@ -24,6 +24,7 @@
 	*{
  margin: 0px;
  padding: 0px;
+ font-family: Arial, Helvetica, sans-serif;
 }
 
 	h2.head{
@@ -44,11 +45,14 @@
   textarea.a{
      background: grey; border-left:black SOLID 10px;
   }
+  .head{
+		text-transform: uppercase;
+	}
 
   </style>
 <body>
 <!-- 2.2 -->
-<h2 class="head"><marquee behavior="Alternate"><B> regular expressions in javascript </B></marquee></h2></br>
+<h2 class="head"><B> regular expressions in javascript </B></h2></br>
 <div style="margin-top: 15px; margin-left: 15px; margin-right: 15px;">
 <p style="margin-left: 20px;">A regular expression is a sequence of characters that forms a search pattern.
 When you search for data in a text, you can use this search pattern to describe what you are searching for.
