--- a/webApp/unit_3.1.html
+++ b/webApp/unit_3.1.html
@@ -20,10 +20,13 @@
  		height: 500px;
  		width: 100%; 
  	}
- 
+   .head{
+		text-transform: uppercase;
+	}
 	*{
  margin: 0px;
  padding: 0px;
+ font-family: Arial, Helvetica, sans-serif;
 }
 
 	h2.head{
@@ -42,7 +45,7 @@
 
 
 <!-- 3.1 -->
-  <h2 class="head" ><marquee behavior="Alternate">Conditional Statements</marquee></h2><br>
+  <h2 class="head" >Conditional Statements</h2><br>
   
   <h3 style="margin-left: 5px; "><b>1) If </b></h3><br>
 <div style="margin-top: 15px; margin-left: 40px; margin-right: 15px;">
