--- a/webApp/unit_3_3.2.html
+++ b/webApp/unit_3_3.2.html
@@ -23,6 +23,7 @@
 	*{
  margin: 0px;
  padding: 0px;
+ font-family: Arial, Helvetica, sans-serif;
 }
 
 	h2.head{
@@ -32,12 +33,15 @@
 		text-align: center;
 		color: #fff;
 	}
+  .head{
+		text-transform: uppercase;
+	}
 </style>
 <body>
 
 
 	<!-- 3.2 -->
-  <h2 class="head" ><marquee behavior="Alternate">Loop- for, do...while, while, label,  break, continue</marquee></h2><br>
+  <h2 class="head" >Loop- for, do...while, while, label,  break, continue.</h2><br>
 
 <h3 style="margin-left: 5px; "><b>1) while loop</b></h3><br>
 <div style="margin-top: 15px; margin-left: 40px; margin-right: 15px;">
