--- a/webApp/unit_3_3.3.html
+++ b/webApp/unit_3_3.3.html
@@ -23,6 +23,7 @@
 	*{
  margin: 0px;
  padding: 0px;
+ font-family: Arial, Helvetica, sans-serif;
 }
 
 	h2.head{
@@ -32,13 +33,15 @@
 		text-align: center;
 		color: #fff;
 	}
-
+  .head{
+		text-transform: uppercase;
+	}
   textarea.a{
      background: grey; border-left:black SOLID 10px;
   }
 </style>
 <body>
-<h2 class="head" ><marquee behavior="Alternate">Object Manupulation- for...in, with Comments</marquee></h2><br>
+<h2 class="head" >Object Manupulation- for...in, with Comments.</h2><br>
  <h3 style="margin-left: 5px; "><b>for...in </b></h3><br>
 <div style="margin-top: 15px; margin-left: 40px; margin-right: 15px;">
 
