--- a/webApp/unit_3_3.4.html
+++ b/webApp/unit_3_3.4.html
@@ -23,6 +23,7 @@
 	*{
  margin: 0px;
  padding: 0px;
+ font-family: Arial, Helvetica, sans-serif;
 }
 
 	h2.head{
@@ -32,13 +33,15 @@
 		text-align: center;
 		color: #fff;
 	}
-
+  .head{
+		text-transform: uppercase;
+	}
   textarea.a{
      background: grey; border-left:black SOLID 10px;
   }
 </style>
 <body>
-<h2 class="head" ><marquee behavior="Alternate">Exception handling- throw, try..catch</marquee></h2><br>
+<h2 class="head" >Exception handling- throw, try..catch.</h2><br>
   <h3 style="margin-left: 5px; "><b>1) Throw </b></h3><br>
 <div style="margin-top: 15px; margin-left: 40px; margin-right: 15px;">
 <p>The throw statement throws (generates) an error. When an error occurs, JavaScript will normally stop, and generate an error message. <br>The technical term for this is: JavaScript will throw an error. <br>The throw statement allows you to create a custom error. The technical term for this is: throw an exception.</p>
