--- a/webApp/unit_4_4.3.html
+++ b/webApp/unit_4_4.3.html
@@ -23,11 +23,15 @@
 	*{
  margin: 0px;
  padding: 0px;
+ font-family: Arial, Helvetica, sans-serif;
 }
 
   textarea.a{
      background: grey; border-left:black SOLID 10px;
   }
+  .head{
+		text-transform: uppercase;
+	}
 
 	h2.head{
 		background: grey;
@@ -42,7 +46,7 @@
 
 <!-- 4.3 -->
 
-<h2 class="head"><marquee behavior="Alternate"><b> predefined functions</b></marquee></h2><br>
+<h2 class="head"><b> predefined functions</b></h2><br>
 <div style="margin-top: 15px; margin-left: 15px; margin-right: 15px;">
   <h3 style="margin-left: 7px;"><b>Definition:</h3></b></br>
   <p style="margin-left: 20px;">
