--- a/webApp/unit_5_5_2.html
+++ b/webApp/unit_5_5_2.html
@@ -24,6 +24,7 @@
 	*{
  margin: 0px;
  padding: 0px;
+ font-family: Arial, Helvetica, sans-serif;
 }
 
 	h2.head{
@@ -65,10 +66,13 @@
   td:hover{
     background:orange;
   }
+  .head{
+		text-transform: uppercase;
+	}
 </style>
 <body>
  
-	<h2 class="head"><marquee behavior="Alternate">Data Type Conversion</marquee></h2><br>
+	<h2 class="head">Data Type Conversion</h2><br>
 
 	<div style="margin-top: 15px; margin-left: 40px; margin-right: 15px;">
 
