--- a/webApp/unit_6_6.1.html
+++ b/webApp/unit_6_6.1.html
@@ -23,6 +23,7 @@
 	*{
  margin: 0px;
  padding: 0px;
+ font-family: Arial, Helvetica, sans-serif;
 }
 
 	h2.head{
@@ -32,10 +33,13 @@
 		text-align: center;
 		color: #fff;
 	}
+  .head{
+		text-transform: uppercase;
+	}
 </style>
 <body>
 
-	<h2 class="head" ><marquee behavior="Alternate">Conditional Statements</marquee></h2><br>
+	<h2 class="head" >Conditional Statements</h2><br>
   
   <h3 style="margin-left: 5px; "><b>1) If </b></h3><br>
 <div style="margin-top: 15px; margin-left: 40px; margin-right: 15px;">
