--- a/webApp/unit_menu_1.html
+++ b/webApp/unit_menu_1.html
@@ -5,13 +5,14 @@
   <style>
     *{
       margin: 0px;
-
+      font-family: Arial, Helvetica, sans-serif;
     }
     .sidebar{
     flex: 2;
     height: 100vh;
     background-color: black;
     color: white;
+    font-family: Arial, Helvetica, sans-serif;
     }
 a:link {
   color: white;
